背景图格式大小调整

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
 
         body.light-theme {
             color: #475569;
-            background: url('/static/images/bg.jpeg') fixed;
+            background: url('/static/images/bg.jpg') fixed;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
